tests/snapshots/runtime/basic_fib.snap
---
source: tests/runtime.rs
---
Ok(
    RuntimeValue {
        value: Number(
            55.0,
        ),
        value_label: SecurityLabel {
            labels: {},
        },
        type_label: SecurityLabel {
            labels: {},
        },
    },
)
