tests/snapshots/runtime/operator_precedence.snap
---
source: tests/runtime.rs
---
Ok(
    RuntimeValue {
        value: Tuple(
            [
                RuntimeValue {
                    value: Boolean(
                        true,
                    ),
                    value_label: SecurityLabel {
                        labels: {},
                    },
                    type_label: SecurityLabel {
                        labels: {},
                    },
                },
                RuntimeValue {
                    value: Boolean(
                        false,
                    ),
                    value_label: SecurityLabel {
                        labels: {},
                    },
                    type_label: SecurityLabel {
                        labels: {},
                    },
                },
                RuntimeValue {
                    value: Boolean(
                        true,
                    ),
                    value_label: SecurityLabel {
                        labels: {},
                    },
                    type_label: SecurityLabel {
                        labels: {},
                    },
                },
            ],
        ),
        value_label: SecurityLabel {
            labels: {},
        },
        type_label: SecurityLabel {
            labels: {},
        },
    },
)
